Fixed climb section spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -190,6 +190,8 @@ html{
         font-weight: bold;
         color: #414f6b;
         line-height: 0.3;
+        margin: 1.5rem 0 0 1rem;
+
 
         span.second-part {
           position: relative;
@@ -199,9 +201,9 @@ html{
         }
       }
 
-    p {
-      margin: 3rem 0 0 4rem;
-      font-size: 0.7rem;
+    p.description {
+      margin: 1.5rem 0 0 3rem;
+      font-size: 0.6rem;
       font-family: 'Lato';
     }
   }
